--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   },
   "homepage": "https://github.com/Koa-js/kor-proxy#readme",
   "dependencies": {
-    "neat-send": "^1.0.3"
+    "neat-request": "^1.0.0"
   }
 }
